@@ -68,6 +68,7 @@ OvmsWebServer::OvmsWebServer()
 
   m_client_cnt = 0;
   m_client_mutex = xSemaphoreCreateMutex();
+  m_client_txqueuesize = 50;
   m_client_backlog = xQueueCreate(50, sizeof(WebSocketTxTodo));
   m_update_ticker = xTimerCreate("Web client update ticker", 250 / portTICK_PERIOD_MS, pdTRUE, NULL, UpdateTicker);
 
@@ -214,10 +215,10 @@ void OvmsWebServer::ConfigChanged(std::string event, void* data)
   }
 #endif
 
-#if MG_ENABLE_FILESYSTEM
   if (!param || param->GetName() == "http.server") {
     // Instances:
     //    Name                Default                 Function
+    //    ws.txqueuesize      50                      Size of WebSocket TX job queue (metrics, events, logs, …)
     //    enable.files        yes                     Enable file serving from docroot
     //    enable.dirlist      yes                     Enable directory listings
     //    docroot             /sd                     File server document root
@@ -225,6 +226,10 @@ void OvmsWebServer::ConfigChanged(std::string event, void* data)
     //    auth.file           .htpasswd               Per directory auth file (Note: no inheritance from parent dir!)
     //    auth.global         yes                     Use global auth for files (user "admin", module password)
 
+    m_client_txqueuesize =
+      MyConfig.GetParamValueInt("http.server", "ws.txqueuesize", 50);
+
+#if MG_ENABLE_FILESYSTEM
     if (m_file_opts.document_root)
       free((void*)m_file_opts.document_root);
     if (m_file_opts.auth_domain)
@@ -245,8 +250,10 @@ void OvmsWebServer::ConfigChanged(std::string event, void* data)
       strdup(MyConfig.GetParamValue("http.server", "auth.file", ".htpasswd").c_str());
     m_file_opts.global_auth_file =
       MyConfig.GetParamValueBool("http.server", "auth.global", true) ? OVMS_GLOBAL_AUTH_FILE : NULL;
+#endif //MG_ENABLE_FILESYSTEM
   }
 
+#if MG_ENABLE_FILESYSTEM
   if (!param || param->GetName() == "password") {
     UpdateGlobalAuthFile();
   }
